@@ -62,18 +62,12 @@
 
 <ul>
     <li>
-        PHP3, PHP4 or PHP5: phpMyAdmin widely uses the 'str_replace()' PHP
-        function that was added in PHP&nbsp;3.0.6, but was buggy up until
-        PHP&nbsp;3.0.8.
-        Then <span class="important">you should not run this script with
-        PHP3&nbsp;&lt;&nbsp;3.0.8</span>.<br />
-        PHP also needs to be <span class="important">compiled with MySQL
-        support</span>;<br />
+        php 4.1.0 or later<br />
         If you want to display inline thumbnails of JPEGs with the original
         aspect ratio, you also need GD2 support in PHP.
     </li>
     <li>
-        MySQL 3.21 or newer (<a href="#faqmysqlversions">details</a>);<br />
+        MySQL 3.23.32 or newer (<a href="#faqmysqlversions">details</a>);<br />
     </li>
     <li>
         a web-browser (doh!).
@@ -2382,7 +2376,7 @@ To create a new, empty mimetype please see libraries/transformations/template_ge
     [1.17] Which MySQL versions does phpMyAdmin support?
 </h4>
 <p>
-    All MySQL versions from 3.21 till 4.0 are fully supported. Please note
+    All MySQL versions from 3.23.32 till 4.0 are fully supported. Please note
     that the older your MySQL version is, the more limitations you will have to
     face.
     <br />
