@@ -7,6 +7,7 @@ $Source$
 
 2003-11-19 Alexander M. Turek  <rabus@users.sourceforge.net>
     * libraries/grab_globals.lib.php3: Do not use $HTTP_*_VARS arrays anymore.
+    * Documentation.html: Modified requirements.
 
 2003-11-18 Alexander M. Turek  <rabus@users.sourceforge.net>
     * libraries/common.lib.php: Recognizing new 2.x config.inc.php revisions.
